fixing gitignore so index shows up in themes folder

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 /themes/default/*
 /themes/gridfocus/*
 /themes/thematic/*
-index.php
+/index.php
 /themes/index.php
 /themes/danielwiener/lib/metabox
-_s_readme_tmp.txt
+/_s_readme_tmp.txt
