--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /themes/danielwiener/js/jquery.tools.min.js
 /themes/danielwiener/fonts/*
 /wflogs/*
+/themes/danielwiener/css/*
+/themes/danielwiener/js/*
+/themes/danielwiener/images/*
